@@ -1,0 +1,2 @@
+#another testcase for bug 661
+bla=fixedint ;should fail
